The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/12/13 14:45:00 CST
Tag: blume-20041213-ml-makedepend
Description:

Fixed bug in code for ml-makedepend.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/12/09 16:30:00 CST
Tag: blume-20041209-statistics
Description:

Added two simple but potentially useful statistics modules to SML/NJ Library.
(See CHANGES file there.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/12/01 16:50:00 CST
Tag: blume-20041201-atom
Description:

smlnj-lib:

  Added function HashString.hashString' for substrings.
  Hand-inlined CharVector.foldl into HashString (for speed).
  Modified implementation of structure Atom to avoid extracting
  strings from substrings unless necessary.
  (Also see CHANGES file for smlnj-lib.)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/11/24 22:15:00 CST
Tag: blume-20041124-cml
Description:

Made sure CML compiles when Position = Int64.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/11/24 14:30:00 CST
Tag: blume-20041124-position
Description:

The compiler can now be compiled in a mode that makes structure Position
equal to Int64.  The default, however, is unchanged (Position = Int31)
for the time being.

To enable 64-bit positions, use the following procedure:

1. Start sml
2. Autoload $smlnj/cmb.cm (if not already autoloaded)
3. Type