@@ -39,6 +39,6 @@ if [ "$HEAP_IMAGE" = "" ]; then
     HEAP_IMAGE="$ROOT"
 fi
 
-$BUILD ml-burg.cm Main.main $HEAP_IMAGE
+"$BUILD" ml-burg.cm Main.main $HEAP_IMAGE
 
 exit 0
